--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -131,8 +131,9 @@ body {
 
 .home__shapes {
   position: absolute;
-  top: -250px;
-  left: 450px;
+  top: -100px;
+  left: 100px;
+  left: calc(50% - 30rem);
   z-index: -1;
 }
 
@@ -242,6 +243,11 @@ body {
   margin: 0 auto;
 }
 
+.proyect__img{
+  width: 80rem; 
+  height: 45rem;
+}
+
 .proyect__content {
   position: relative;
   background-color: var(--color-principal);
@@ -249,6 +255,13 @@ body {
   padding: 3rem 5rem;
   color: white;
   transform: translateY(-10rem);
+}
+
+.proyect__text{
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .proyect__title {
@@ -293,19 +306,17 @@ body {
 
 /* Results */
 .result__content{
-  width: auto !important;
   height: 500px;
   background-color: var(--color-text);
   margin: 5rem 20rem;
   margin-bottom: 15rem;
-  padding: 10rem 20rem;
   border-radius: 1rem;
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  gap: 20rem;
 }
 
 .result__data{
@@ -313,7 +324,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  flex-basis: 50%;
   height: 100%;
 }
 
@@ -437,6 +448,8 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
   width: 100%;
   height: 100%;
 }
